RR: Spencer's latest tweaks including Person entity and Group page.

--- a/trunk/virtual_lab/src/main/webapp/help.html
+++ b/trunk/virtual_lab/src/main/webapp/help.html
@@ -54,6 +54,8 @@
               <li><a href="members.html">Members/Partners</a></li>
               <li class="active"><a href="help.html">Tutorials/Help</a></li>
               <li><a href="contact.html">Contact</a></li>
+              <li><a href="person.html">Person Record</a></li>
+              <li><a href="group.html">Group Record</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -100,18 +102,21 @@
 
     <footer> <!-- footer start -->
       <div class="row-fluid">
-      <div id="column-first" class="footer-column span4">
+      <div class="footer-column span4">
         <p>&copy; 2012 HuNI HuNI is proud to be working in partnership with the NeCTAR (National eResearch Collaboration Tools and Resources) project to create an online research community around Australia's cultural datasets. This project will benefit Australian researchers by providing them with access to a wealth of combined resources and the tools with which to analyse and share them, thus enhancing their research outcomes. </p>
       </div>
       
-      <div id="column-second" class="footer-column span4">
+      <div class="footer-column span4">
         <h4>Brought to you by:</h4>
         <a href="#"><img src="img/logo_nectar.gif" width="176" height="99" alt="Nectar" /></a>
         <a href="#"><img src="img/logo_deakin.gif" width="98" height="99" alt="Deakin" /></a>
       </div>
 
-      <div id="column-third" class="footer-column span4">
+      <div class="footer-column span4">
         <h4>Connect with us!</h4>
+        <div id="footer-social">
+        <a href="#"><img src="img/img_facebook.gif" /></a> <a href="#"><img src="img/img_google.gif" /></a> <a href="#"><img src="img/img_twitter.gif" /></a> <a href="#"><img src="img/img_skype.gif" /></a> <a href="#"><img src="img/img_linkedin.gif" /></a>
+      </div>
       </div>
     </div>
     </footer> <!-- footer end -->
