--- a/trunk/virtual_lab/src/main/webapp/index.html
+++ b/trunk/virtual_lab/src/main/webapp/index.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" href="ico/favicon.png">
   </head>
 
-  <body>
+  <body id="index">
 
     <div class="navbar"> <!-- header start -->
       <div class="navbar-inner">
@@ -33,12 +33,109 @@
 
           <div id="user-information"> <!-- user information -->
             <ul>
-             <li>Welcome back, Registered User!</li>
-              <li><a href="#">Profile</a></li>|
-              <li><a href="#">Settings</a></li>|
-              <li><a href="#">Logout</a></li>
+             <li>Have you registered?</li>
+              <li><a href="#registrationModal" role="button" data-toggle="modal">Register</a></li>  |
+              <li><a href="#loginModal" role="button" data-toggle="modal">Login</a></li>|
+              <li><a href="#">Find Out More</a></li>
             </ul>         
+
+    <!-- Button to trigger modal -->
+     
+    <!-- Modal -->
+    <div id="registrationModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="modalLabel">New User Registration</h3>
+    </div>
+    <div class="modal-body">
+   
+<form id="registration-form " class="">
+
+    <div class="control-group">
+    <label class="control-label" for="inputUsername">Username*</label>
+    <div class="controls">
+    <input type="text" id="inputUsername" placeholder="Username">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputFirstName">First Name*</label>
+    <div class="controls">
+    <input type="text" id="inputFirstName" placeholder="First Name">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputLastName">Last Name*</label>
+    <div class="controls">
+    <input type="text" id="inputLastName" placeholder="Last Name">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputEmail">Email Address*</label>
+    <div class="controls">
+    <input type="text" id="inputEmail" placeholder="Email Address">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputInstitution">Institution</label>
+    <div class="controls">
+    <input type="text" id="inputInstitution" placeholder="Institution">
+    </div>
+    </div>
+
+    </div>
+    <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+    <button class="btn btn-primary">Submit</button>
+    </div>
+    </div>
+  </form>
+
           </div>
+
+ <div id="loginModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="modalLabel">Researcher Login</h3>
+    </div>
+    <div class="modal-body">
+
+
+          <div class="modal-body">
+   
+<form id="login-form" class="">
+
+    <div class="control-group">
+    <label class="control-label" for="inputUsername">Username</label>
+    <div class="controls">
+    <input type="text" id="inputUsername" placeholder="Username">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputPasword">Password</label>
+    <div class="controls">
+    <input type="text" id="inputPassword" placeholder="Password">
+    </div>
+    </div>
+
+    <p>Not a registered user? Click here to create an account.</p>
+    <p>Forgot your password? Click here to retrieve it.</p>
+
+    </div>
+    <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+    <button class="btn btn-primary">Submit</button>
+    </div>
+    </div>
+  </form>
+
+          </div>
+
+
 
           <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <!-- navigation toggle button -->
             <span class="icon-bar"></span>
@@ -54,6 +151,8 @@
               <li><a href="members.html">Members/Partners</a></li>
               <li><a href="help.html">Tutorials/Help</a></li>
               <li><a href="contact.html">Contact</a></li>
+              <li><a href="person.html">Person Record</a></li>
+              <li><a href="group.html">Group Record</a></li>
             </ul>
           </div>
         </div>
@@ -133,18 +232,21 @@
 
     <footer> <!-- footer start -->
       <div class="row-fluid">
-      <div id="column-first" class="footer-column span4">
+      <div class="footer-column span4">
         <p>&copy; 2012 HuNI HuNI is proud to be working in partnership with the NeCTAR (National eResearch Collaboration Tools and Resources) project to create an online research community around Australia's cultural datasets. This project will benefit Australian researchers by providing them with access to a wealth of combined resources and the tools with which to analyse and share them, thus enhancing their research outcomes. </p>
       </div>
       
-      <div id="column-second" class="footer-column span4">
+      <div class="footer-column span4">
         <h4>Brought to you by:</h4>
         <a href="#"><img src="img/logo_nectar.gif" width="176" height="99" alt="Nectar" /></a>
         <a href="#"><img src="img/logo_deakin.gif" width="98" height="99" alt="Deakin" /></a>
       </div>
 
-      <div id="column-third" class="footer-column span4">
+      <div class="footer-column span4">
         <h4>Connect with us!</h4>
+        <div id="footer-social">
+        <a href="#"><img src="img/img_facebook.gif" /></a> <a href="#"><img src="img/img_google.gif" /></a> <a href="#"><img src="img/img_twitter.gif" /></a> <a href="#"><img src="img/img_skype.gif" /></a> <a href="#"><img src="img/img_linkedin.gif" /></a>
+      </div>
       </div>
     </div>
     </footer> <!-- footer end -->
