--- a/trunk/virtual_lab/src/main/webapp/members.html
+++ b/trunk/virtual_lab/src/main/webapp/members.html
@@ -33,7 +33,7 @@
 
           <div id="user-information"> <!-- user information -->
             <ul>
-             <li>Welcome back, Registered User!</li>
+             <li>Welcome back, User Manager!</li>
               <li><a href="#">Profile</a></li>|
               <li><a href="#">Settings</a></li>|
               <li><a href="#">Logout</a></li>
@@ -54,6 +54,8 @@
               <li class="active"><a href="members.html">Members/Partners</a></li>
               <li><a href="help.html">Tutorials/Help</a></li>
               <li><a href="contact.html">Contact</a></li>
+              <li><a href="person.html">Person Record</a></li>
+              <li><a href="group.html">Group Record</a></li>
             </ul>
           </div>
         </div>
@@ -96,24 +98,27 @@
 <h3>Partners</h3>
 <p>Integer elit ipsum, luctus vel rutrum non, viverra quis nisl. Suspendisse feugiat rhoncus massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam eu erat at leo consequat congue sed ut justo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam posuere aliquet pulvinar. Integer placerat, velit eu facilisis ultrices, lorem justo convallis leo, eget tempus lorem massa vel ligula. Aliquam rutrum porta enim eu feugiat. Nullam non lectus arcu. Phasellus eu leo orci. </p>
 
-<img src="img/logo_nectar.gif" alt="Nectar" /> <img src="img/logo_deakin.gif" alt="Deakin" />
+<span class="partner-logo"><a href="#"><img src="img/logo_nectar.gif" alt="Nectar" /></a></span> <span class="partner-logo"><a href="#"><img src="img/logo_deakin.gif" alt="Deakin" /></a></span>
 
  </div> <!-- main content end -->     
 
     <footer> <!-- footer start -->
       <div class="row-fluid">
-      <div id="column-first" class="footer-column span4">
+      <div class="footer-column span4">
         <p>&copy; 2012 HuNI HuNI is proud to be working in partnership with the NeCTAR (National eResearch Collaboration Tools and Resources) project to create an online research community around Australia's cultural datasets. This project will benefit Australian researchers by providing them with access to a wealth of combined resources and the tools with which to analyse and share them, thus enhancing their research outcomes. </p>
       </div>
       
-      <div id="column-second" class="footer-column span4">
+      <div class="footer-column span4">
         <h4>Brought to you by:</h4>
         <a href="#"><img src="img/logo_nectar.gif" width="176" height="99" alt="Nectar" /></a>
         <a href="#"><img src="img/logo_deakin.gif" width="98" height="99" alt="Deakin" /></a>
       </div>
 
-      <div id="column-third" class="footer-column span4">
+      <div class="footer-column span4">
         <h4>Connect with us!</h4>
+        <div id="footer-social">
+        <a href="#"><img src="img/img_facebook.gif" /></a> <a href="#"><img src="img/img_google.gif" /></a> <a href="#"><img src="img/img_twitter.gif" /></a> <a href="#"><img src="img/img_skype.gif" /></a> <a href="#"><img src="img/img_linkedin.gif" /></a>
+      </div>
       </div>
     </div>
     </footer> <!-- footer end -->
