--- a/virtual_lab/src/main/webapp/index.html
+++ b/virtual_lab/src/main/webapp/index.html
@@ -204,6 +204,7 @@
       </div>
     </div>
 
+<!--  
     <div class="row-fluid">
       <div class="span4">
         <h3>Are you a researcher?</h3>
@@ -212,6 +213,7 @@
       <p>Sed tellus sapien, ultricies dapibus sodales a, dictum in tortor. </p>
     </div>
 
+<!--  
       <div class="span4">
          <h3>Popular Records</h3>
       <ul>
@@ -222,15 +224,22 @@
         <li>Sit amet feugiat felis pulvinar eget</li>        
       </ul>
     </div>
+-->
 
+<!--  
 <div class="span4">
       <h3>Movies Released This Month</h3>
       <p>Tag cloud.</p>
       </div>
 
-    </div> <!-- main content end -->     
+    </div> 
+-->
 
-    <footer> <!-- footer start -->
+    <!-- main content end --> 
+        
+	<!-- footer start -->
+
+    <footer> 
       <div class="row-fluid">
       <div class="footer-column span4">
         <p>&copy; 2012 HuNI HuNI is proud to be working in partnership with the NeCTAR (National eResearch Collaboration Tools and Resources) project to create an online research community around Australia's cultural datasets. This project will benefit Australian researchers by providing them with access to a wealth of combined resources and the tools with which to analyse and share them, thus enhancing their research outcomes. </p>
@@ -251,8 +260,7 @@
     </div>
     </footer> <!-- footer end -->
     </div>
-
-
+ 
 
     <!-- Le javascript
     ================================================== -->
