--- a/virtual_lab/src/main/webapp/members.html
+++ b/virtual_lab/src/main/webapp/members.html
@@ -129,7 +129,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="/lib/bootstrap/js/bootstrap.js"></script>
 
   </body>
 </html>
