--- a/virtual_lab/src/main/webapp/people.html
+++ b/virtual_lab/src/main/webapp/people.html
@@ -102,7 +102,8 @@
       </div>
       </div>
     </div>
-    </footer> <!-- footer end -->
+    </footer> 
+    <!-- footer end -->
 
     <!-- Le javascript
     ================================================== -->
