--- a/trunk/virtual_lab/src/main/webapp/people.html
+++ b/trunk/virtual_lab/src/main/webapp/people.html
@@ -1,42 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" ng-app = "personsearchbrowse">
-  <head>
-    <meta charset="utf-8" >
-	<title>HuNI Virtual Laboratory | People</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Searching for people.">
-    <meta name="author" content="Richard Rothwell, VeRSI">
-    
-    <!-- Le styles -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+	<head>
+		<meta charset="utf-8">
+		
+		<title>HuNI Virtual Laboratory | People</title>
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Searching for people.">
+		<meta name="author" content="Richard Rothwell, VeRSI">
+		
+		<!-- Le styles -->
+		<link href="css/bootstrap.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
+		<link href="lib/angular-ui/angular-ui.css" rel="stylesheet">
+		
+		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+		<!--[if lt IE 9]>
+		      <script src="js/html5shiv.js"></script>
+		    <![endif]-->
+		
+		<!-- Fav and touch icons -->
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
+		<link rel="shortcut icon" href="ico/favicon.png">
+		
+		<script src="http://code.jquery.com/jquery.js"></script>
+		<script src="lib/bootstrap/js/bootstrap.js"></script>
+		<script src="lib/angular/angular.js"></script>
+		<script src="lib/angular/angular-resource.js"></script>
+		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
+		
+<!-- 		<script src="lib/angular-ui/angular-ui.js"></script>
+ -->		
+		<script src="js/search/person/app.js"></script>
+		<script src="js/search/person/controllers.js"></script>
+		<script src="js/search/person/filters.js"></script>
+		<script src="js/search/person/services.js"></script>
+		<script src="js/search/person/directives.js"></script>
+		
+	</head>
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-    <![endif]-->
-
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="ico/favicon.png">
- 
-	<script src="http://code.jquery.com/jquery.js"></script>
- 	<script src="lib/bootstrap/js/bootstrap.js"></script>
-	<script src="lib/angular/angular.js"></script>
-	<script src="lib/angular/angular-resource.js"></script>	
-	
-	<script src="js/search/person/app.js"></script>
-	<script src="js/search/person/controllers.js"></script>
-	<script src="js/search/person/filters.js"></script>
-	<script src="js/search/person/services.js"></script>
-	<script src="js/search/person/directives.js"></script>
- 
- </head>
-
-  <body>
+<body>
 
     <div class="navbar"> <!-- header start -->
       <div class="navbar-inner">
