RR: minor tweaks. -- some comments -- moved JS to bottom of page to improve load times -- improved link colours in entry rectangles

--- a/trunk/virtual_lab/src/main/webapp/people.html
+++ b/trunk/virtual_lab/src/main/webapp/people.html
@@ -19,26 +19,12 @@
 		      <script src="js/html5shiv.js"></script>
 		    <![endif]-->
 		
-		<!-- Fav and touch icons -->
+		<!-- Favicon and touch icons -->
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
 		<link rel="shortcut icon" href="ico/favicon.png">
-		
-		<script src="http://code.jquery.com/jquery.js"></script>
-		<script src="lib/bootstrap/js/bootstrap.js"></script>
-		<script src="lib/angular/angular.js"></script>
-		<script src="lib/angular/angular-resource.js"></script>
-		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
-		
-<!-- 		<script src="lib/angular-ui/angular-ui.js"></script>
- -->		
-		<script src="js/search/person/app.js"></script>
-		<script src="js/search/person/controllers.js"></script>
-		<script src="js/search/person/filters.js"></script>
-		<script src="js/search/person/services.js"></script>
-		<script src="js/search/person/directives.js"></script>
 		
 	</head>
 
@@ -75,7 +61,8 @@
           </div><!--/.nav-collapse -->
         </div>
       </div>
-</div> <!-- header end -->
+</div>
+<!-- header end -->
 
     <div class="container-fluid"> <!-- main content start -->
 
@@ -114,6 +101,18 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+		
+		<script src="http://code.jquery.com/jquery.js"></script>
+		<script src="lib/bootstrap/js/bootstrap.js"></script>
+		<script src="lib/angular/angular.js"></script>
+		<script src="lib/angular/angular-resource.js"></script>
+		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
+		
+		<script src="js/search/person/app.js"></script>
+		<script src="js/search/person/controllers.js"></script>
+		<script src="js/search/person/filters.js"></script>
+		<script src="js/search/person/services.js"></script>
+		<script src="js/search/person/directives.js"></script>
 	
 
   </body>
