Change of title on index page.

--- a/trunk/virtual_lab/src/main/webapp/index.html
+++ b/trunk/virtual_lab/src/main/webapp/index.html
@@ -164,7 +164,7 @@
 
       <div class="row-fluid">
         <div class="search-container">
-        <h2>Unlocking and uniting Australia's cultural datasets</h2>
+        <h2>Linked Data Search</h2>
         <form class="searchbox" action="http://corbicula.huni.net.au/facet-browser/facet-browser.html" method="get">
 
     <div class="input-prepend">
