RR: integrating Spencer's pages into AngularJS land. -- this involved pulling out the main content of each page out into partials, possibly overwriting partials with the same name -- merging app.js, controllers.js etc from huniaggregate up into the root versions of the same name. -- removing files no longer needed -- standardising on dashes in urls

--- a/trunk/virtual_lab/src/main/webapp/index-3column.html
+++ b/trunk/virtual_lab/src/main/webapp/index-3column.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HuNI Virtual Laboratory</title>
-    <meta name="description" content="A virtual laboratory for humanities researchers based on linked data principles.">
+    <meta name="description" content="A virtual laboratory for humanities researchers based on semantic web principles.">
     <meta name="Richard Rothwell, VeRSI" content="">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
