RR: tweaks -- changed name of search -- changed location of contact menu item

--- a/trunk/virtual_lab/src/main/webapp/index.html
+++ b/trunk/virtual_lab/src/main/webapp/index.html
@@ -154,6 +154,7 @@
              	<ul class="dropdown-menu">
 	              <li><a ng-href="#/about">The HuNI Project</a></li>  
 	              <li><a ng-href="#/members-partners">Members/Partners</a></li>
+              		<li><a ng-href="#/contact">Contact</a></li>
               	</ul>
               </li>
               <li><a ng-href="#/advanced-search">Browse/Search</a></li>
@@ -165,10 +166,8 @@
 		              <li><a ng-href="#/dataset-directory">Internet Sources</a></li>
 	              	</ul>
                </li>
-
               <li><a ng-href="#/help">Tutorials/Help</a></li>
-              <li><a ng-href="#/contact">Contact</a></li>
-              <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Test<b class="caret"></b></a>
+              <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Demo<b class="caret"></b></a>
               	<ul class="dropdown-menu">
 	              <li><a ng-href="#/person">Person Record</a></li>
 	              <li><a ng-href="#/group">Group Record</a></li>  
